--- a/doc/night.config.demo.config.toml
+++ b/doc/night.config.demo.config.toml
@@ -1,7 +1,7 @@
 baseURL = 'http://onus.fun/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'nightfall'
+languageCode = 'zh-cn'
+title = 'Onus Fun'
+theme = 'PaperMod'
 [params]
 author = "Mr Hugo"
 user = "hello"
